fix: outline card alignment

--- a/src/styles/homepage_styles/_homepage_section-2.scss
+++ b/src/styles/homepage_styles/_homepage_section-2.scss
@@ -64,11 +64,6 @@ $headingColor: #80C24A;
     padding: 3dvh;
     width: 80%;
 
-    a:focus {
-        outline: auto;
-        outline-offset: 3dvh;
-    }
-
     >h2 {
         align-self: center;
         background-color: $borderColor;
